Fix vertical alignment of custom emojis in display name

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -158,11 +158,3 @@
     color: $error-color;
   }
 }
-
-@mixin ugc-emoji {
-  :deep(.emoji) {
-    height: 24px;
-    vertical-align: text-bottom;
-    width: 24px;
-  }
-}
